Archive2/c9/5e70c640254c06/output
main.cpp: In instantiation of ‘T&& strict_move(T&) [with T = const A]’:
main.cpp:23:27:   required from here
main.cpp:16:5: error: static assertion failed: parameter is const, would be copied instead of moved
     static_assert(!std::is_const<T>::value, "parameter is const, would be copied instead of moved");
     ^
